[package]
name = "ulo-project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
base64 = "0.13"
actix-cors = "0.6"
rand = "0.8"
lettre = "0.10.0-rc.2"